Add git ref: ocp3

--- a/l-was-build.yaml
+++ b/l-was-build.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: l-was
 spec:
   source:
+    ref: ocp3
     git:
       uri: 'https://github.com/TechNetDemo/l-was'
     type: Git
