Push to image stream hello-world

--- a/l-was-build.yaml
+++ b/l-was-build.yaml
@@ -12,3 +12,7 @@ spec:
   strategy:
     dockerStrategy:
       dockerfilePath: Dockerfile
+  output:
+    to:
+      kind: "ImageStreamTag"
+      name: "hello-world:latest"
