--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,9 +9,8 @@ pipeline {
             steps {
                 script {
                     openshift.withCluster() {
-                        if(!openshift.selector('project', project_name).exists()) {
+                        openshift.withProject(project_name) {
                             echo "Create Project ${project_name}"
-                            openshift.newProject(project_name)
                         }
                     }
                 }
